Add name of SKLearn KNN classifier

--- a/Nonlinear.ipynb
+++ b/Nonlinear.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## S/4HANA ML Class\n",
-    "### Linear Models / Bias and Variability"
+    "### Linear and Non-linar Models / Bias and Variability"
    ]
   },
   {
@@ -42,6 +42,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Logistic Regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -58,6 +65,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Support Vector Machine"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -69,7 +83,14 @@
     "svc.fit(X_train, y_train)\n",
     "\n",
     "yhat = svc.predict(X_test)\n",
-    "mean_squared_error(y_test, yhat)\n"
+    "mean_squared_error(y_test, yhat)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Plot Raw Data"
    ]
   },
   {
@@ -118,7 +139,7 @@
     "y_boundary = [-1 * (w[0] * X[:,0].min() + b) / w[1],\n",
     "              -1 * (w[0] * X[:,0].max() + b) / w[1]]\n",
     "                 \n",
-    "# plt.plot([X.min(), X.max()], y_boundary, 'r-')\n"
+    "# plt.plot([X.min(), X.max()], y_boundary, 'r-')"
    ]
   },
   {
@@ -129,7 +150,7 @@
    "source": [
     "# Scatter plot of raw data + LR decision boundary\n",
     "plt.figure()\n",
-    "plt.title(\"Raw Data\")\n",
+    "plt.title(\"Raw Data + LR Decision Boundary\")\n",
     "blueSet = y == 0\n",
     "orangeSet = y == 1\n",
     "\n",
@@ -139,8 +160,9 @@
     "            s=20, edgecolor='k')\n",
     "plt.xlabel(\"$x_1$\")\n",
     "plt.ylabel(\"$x_2$\")\n",
+    "\n",
     "# Print Decision Boundary\n",
-    "plt.ylim(X[:,1].min(), X[:,1].max())\n",
+    "plt.ylim(X[:,1].min(), X[:,1].max()) # Restrict plot of decision boudary to the area where we have data\n",
     "plt.plot([X[:,0].min(), X[:,0].max()], y_boundary, 'r-')\n",
     "\n",
     "plt.show()"
@@ -191,7 +213,7 @@
     "# Create a grid \n",
     "\n",
     "gridXs, gridYs = np.mgrid[X[:, 0].min():X[:, 0].max():.1, X[:,1].min():X[:,1].max():.1]\n",
-    "gridXs = gridXs.ravel()\n",
+    "gridXs = gridXs.ravel()  # flatten\n",
     "gridYs = gridYs.ravel()"
    ]
   },
@@ -225,7 +247,7 @@
    "source": [
     "# Scatter Plot\n",
     "plt.figure()\n",
-    "plt.title(\"Predictions\")\n",
+    "plt.title(\"LR Predictions\")\n",
     "\n",
     "plt.scatter(gridXs, gridYs, 2, c=preds)\n",
     "#colors = [logReg.predict(np.array([a,b]).reshape(-1,2)) for a in xx for b in yy]\n",
@@ -293,12 +315,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Plot SVM Classes and LR Decision Boundary"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def svc_predict(k):\n",
     "    return svc.predict(k.reshape(-1, 2))\n",
     "\n",
@@ -311,10 +339,6 @@
     "blueSet = y == 0\n",
     "orangeSet = y == 1\n",
     "\n",
-    "#plt.scatter(X[blueSet, 0], X[blueSet, 1], c=\"blue\",\n",
-    "#            s=20, edgecolor='k')\n",
-    "#plt.scatter(X[orangeSet, 0], X[orangeSet, 1], c=\"orange\",\n",
-    "#            s=20, edgecolor='k')\n",
     "plt.xlabel(\"$x_1$\")\n",
     "plt.ylabel(\"$x_2$\")\n",
     "# Print Decision Boundary\n",
@@ -331,9 +355,14 @@
    "source": [
     "## Exercises:\n",
     "\n",
+    "Use Scikit-Learn's `neighbors.KNeighborsClassifier(k=5)` to answer the following questions:\n",
+    "\n",
     "- What is the MSE (mean squared error) for KNN?\n",
+    "  - What is the relationship (if any) between the training error rate and the test error rate for various `k`?\n",
+    "- Plot the decision boundary for various `k`'s.\n",
     "- Is KNN a linear classifier?\n",
-    "- What influence does the parameter $k$ have on bias and variance? "
+    "- What influence does the parameter $k$ have on bias and variance? \n",
+    "- How useful is KNN?"
    ]
   },
   {
